menu: Add support for misc partition
() Moved the disk I/O code out of android.c into lib/rawio.c so
that other code can use it

() Create miscptn.c which looks for bootloader commands from
two different areas in the Android 'misc' partition:

 * the Bootloader Control Block
 * the oneshot boot target stored 4 sectors in

() 'menu androidcommand' keyword added to the config language to
specify the misc partition number

() Change to default boot target to the result of androidcommand
if specified and matching an existing label

Change-Id: I49ace506e70baee2085a9cd0c633e8aa486c53d0
Signed-off-by: Andrew Boie <andrew.p.boie@intel.com>

--- a/com32/lib/Makefile
+++ b/com32/lib/Makefile
@@ -121,6 +121,8 @@ LIBOBJS = \
 	syslinux/adv.o syslinux/advwrite.o syslinux/getadv.o		\
 	syslinux/setadv.o						\
 	\
+	syslinux/rawio.o						\
+	\
 	syslinux/video/fontquery.o syslinux/video/forcetext.o		\
 	syslinux/video/reportmode.o
 
